--- a/UC_version/index.html
+++ b/UC_version/index.html
@@ -1,5 +1,8 @@
 
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml"> 
+
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>The Making of Ancient Eurasia Project</title> 
@@ -32,17 +35,17 @@
 	<div id="right_nav_inner">
 		<h3>Research Foci:</h3>
 		<ul> 
-			<li><a href="index.php">About MAE</a></li>	
-			<li><a href="anthropology.php">Anthropology</a></li>						
-			<li><a href="archaeometry.php">Archaeometry</a></li>				
-			<li><a href="instrumentation.php">Instrumentation</a></li>
+			<li><a href="index.html">About MAE</a></li>	
+			<li><a href="anthropology.html">Anthropology</a></li>						
+			<li><a href="archaeometry.html">Archaeometry</a></li>				
+			<li><a href="instrumentation.html">Instrumentation</a></li>
 		</ul> 
 
 		<span><h3>Project Details:</h3></span>
 		<ul>
-			<li><a href="team.php">Team</a></li>
-            <li><a href="publications.php">Publications</a></li>
-            <li><a href="contact.php">Contact</a></li>
+			<li><a href="team.html">Team</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="contact.html">Contact</a></li>
 			<!--
 			<li><a href="projects.php">Projects</a></li>
 			<li><a href="results.php">Results</a></li>
@@ -82,7 +85,7 @@
 				<div id="content_inner">
 	
 					<h2>About The Making of Ancient Eurasia Project</h2>
-					<p class="first">The Making of Ancient Eurasia (<a href="http://mae.uchicago.edu/">MAE</a>) project is an integrated interdisciplinary research consortium in which anthropologists from the <a target="_blank" href="http://anthropology.uchicago.edu/">University of Chicago</a>, <a target="_blank" href="http://anthropology.artsci.wustl.edu/">Washington University in Saint Louis</a>, <a target="_blank" href="http://anthropology.cornell.edu/">Cornell University</a>, <a target="_blank" href="http://www.isu.edu/anthro/">Idaho State University</a>, and materials scientists at Argonne National Laboratory (<a target="_blank" href="http://www.anl.gov">ANL</a>) and the <a target="_blank" href="http://www.synchrotron.org.au/">Australian Synchrotron</a> are collaborating in the simultaneous investigation of early ceramic and metal technologies in the Eurasian steppes, the Caucasus, and Central China. The MAE investigations are advancing the first combined, comparative anthropological and archaeometric study of ancient Eurasian ceramics and metalwork from the macro-, meso-, and micro- scales of analysis. This simultaneous analysis of ceramic and metal materials allows for a broader understanding of the production techniques, organization, and social and technical goals that drove sociocultural development on an interregional scale. Through intensive interactions with ANL and Asutralian Synchrotron scientists, our project offers opportunities for <a href="archaeometry.php">new archaeometric analytical techniques</a>, such as digital radiography (<a target="_blank" href="instrumentation.php#A1">DR</a>), X-ray computed tomography (<a target="_blank" href="instrumentation.php#A2">XCT</a>), and small- and wid-angle X-ray scattering (<a target="_blank" href="instrumentation.php#A5">SAXS/WAXS</a>), and their applications to be developed in direct conjunction with <a href="anthropology.php">anthropological questions</a>.</p>
+					<p class="first">The Making of Ancient Eurasia (<a href="http://mae.uchicago.edu/">MAE</a>) project is an integrated interdisciplinary research consortium in which anthropologists from the <a target="_blank" href="http://anthropology.uchicago.edu/">University of Chicago</a>, <a target="_blank" href="http://anthropology.artsci.wustl.edu/">Washington University in Saint Louis</a>, <a target="_blank" href="http://anthropology.cornell.edu/">Cornell University</a>, <a target="_blank" href="http://www.isu.edu/anthro/">Idaho State University</a>, and materials scientists at Argonne National Laboratory (<a target="_blank" href="http://www.anl.gov">ANL</a>) and the <a target="_blank" href="http://www.synchrotron.org.au/">Australian Synchrotron</a> are collaborating in the simultaneous investigation of early ceramic and metal technologies in the Eurasian steppes, the Caucasus, and Central China. The MAE investigations are advancing the first combined, comparative anthropological and archaeometric study of ancient Eurasian ceramics and metalwork from the macro-, meso-, and micro- scales of analysis. This simultaneous analysis of ceramic and metal materials allows for a broader understanding of the production techniques, organization, and social and technical goals that drove sociocultural development on an interregional scale. Through intensive interactions with ANL and Asutralian Synchrotron scientists, our project offers opportunities for <a href="archaeometry.html">new archaeometric analytical techniques</a>, such as digital radiography (<a target="_blank" href="instrumentation.html#A1">DR</a>), X-ray computed tomography (<a target="_blank" href="instrumentation.html#A2">XCT</a>), and small- and wid-angle X-ray scattering (<a target="_blank" href="instrumentation.html#A5">SAXS/WAXS</a>), and their applications to be developed in direct conjunction with <a href="anthropology.html">anthropological questions</a>.</p>
 
 
 
@@ -191,6 +194,7 @@
 				<li><a target="_blank" href="http://www.kaogu.cn/en/index.asp">Chinese National Institute of Archaeology (IA, CASS)</a></li>
 				<li><a target="_blank" href="http://www.kaogu.cn/en/detail.asp?ProductID=1132">Yi Luo River Valley Survey Project (YRV)</a></li>
 				<li><a target="_blank" href="http://www.saie.wustl.edu/">Central Asian Archaeology and Spatial Analysis Laboratory (SAIE)</a></li>
+                <li><a target="_blank" href="http://www.aragats.net/">Project for the Archaeology and Geography of Ancient Transcaucasian Societies (ArAGATS)</a></li>
 				<li id="last">Copyright 2012, MAE Project</li>
 				<li id="phlabs"><a target="_blank" href="http://www.phlabs.net/" class="phlabs icon">website by Ph Labs</a></li>
 
