--- a/UC_version/team.html
+++ b/UC_version/team.html
@@ -1,6 +1,14 @@
 
 
-<?php include "_includes/head.inc.php"; ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml"> 
+
+<head> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>The Making of Ancient Eurasia Project</title> 
+<link href="styles.css" media="all" rel="stylesheet" type="text/css" /> 
+<link rel="shortcut icon" href="_images/favicon.ico"/>
+</head> 
 
 
 <body id="body_team"> 
@@ -8,7 +16,69 @@
 		<div id="main_wrapper_inner"> 
 		
 
-<?php include "_includes/nav.inc.php"; ?>
+<div id="header">
+	<div id="header_logo">
+		<img src="_images/MAE_Logo-Graphic1-slim.png">
+	</div>
+
+	<div id="org_logos_horizontal">
+		<img src="_images/Institution_Logos-slim.png">
+	</div>
+
+	<div id="header_image_wide">
+		<img id="header_image_wide" src="_images/mae_header_image_may2012.png">
+	</div>
+</div> <!-- end header -->
+
+
+<div id="right_nav">
+	<div id="right_nav_inner">
+		<h3>Research Foci:</h3>
+		<ul> 
+			<li><a href="index.html">About MAE</a></li>	
+			<li><a href="anthropology.html">Anthropology</a></li>						
+			<li><a href="archaeometry.html">Archaeometry</a></li>				
+			<li><a href="instrumentation.html">Instrumentation</a></li>
+		</ul> 
+
+		<span><h3>Project Details:</h3></span>
+		<ul>
+			<li><a href="team.html">Team</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="contact.html">Contact</a></li>
+			<!--
+			<li><a href="projects.php">Projects</a></li>
+			<li><a href="results.php">Results</a></li>
+			<li><a href="resources.php">Resources</a></li>
+			<li><a href="bibliography.php">Bibliography</a></li>
+			-->
+			<!-- 					
+			<li><a href="images.php">Images</a></li> 
+			-->
+	  	</ul>
+	  
+	  	<span><h3>Resources:</h3></span>
+	  	<ul>
+			<li><a target="_blank" href="http://corinth.uchicago.edu/maewiki/doku.php">Wiki</a></li> 
+            <li><a target="_blank" href="http://corinth.uchicago.edu/repid/">REPID</a></li>
+            <li><a target="_blank" href="http://mae.uchicago.edu/References/">Library</a></li>
+			<!--
+			<li><a href="certifications.php">Certifications</a></li>				
+			<li><a href="forms.php">Forms</a></li>
+			<li><a href="articles.php">Articles</a></li>
+			-->
+		</ul>
+
+		<span><h3>Follow MAE:</h3></span>
+	  	<ul>
+			<li><a target="_blank" href="http://twitter.com/#!/MAEarchaeometry" class="twitter icon">@MAEarchaeometry</a></li> 
+			<li id="last"><a target="_blank" href="https://picasaweb.google.com/113506020224703151967" class="flickr icon">MAE on Picasa</a></li>
+
+
+		</ul>
+		
+	</div> <!-- end left_nav_inner -->
+</div> <!-- end left_nav -->
 
 
 			<div id="content">
@@ -231,7 +301,47 @@
 			</div><!--end content-->
 
 			
-<?php include "_includes/footer.inc.php"; ?>
+<div id="footer">
+		<div id="footer_inner">
+			
+			<ul>
+				<h6>Participating Institutions</h6>	
+				<li><a target="_blank" href="http://www.uchicago.edu/index.shtml">University of Chicago</a></li>
+				<li><a target="_blank" href="http://www.anl.gov/">Argonne National Laboratory</a></li>
+				<li><a target="_blank" href="http://www.uchicagoargonnellc.org/">UChicago/Argonne, LLC</a></li>
+			</ul>
+
+
+			<ul>
+				<h6>Argonne National Laboratory Divisions</h6>	
+				<li><a target="_blank" href="http://www.ne.anl.gov/">ANL Nuclear Engineering Division (NED)</a></li>
+				<li><a target="_blank" href="http://www.msd.anl.gov/">ANL Materials Science Division (MSD)</a></li>
+				<li><a target="_blank" href="http://cars.uchicago.edu/">Consortium for Advanced Radiation Sources (CARS)</a></li>
+				<li><a target="_blank" href="http://cars9.uchicago.edu/chemmat/index.html">ChemMat CARS</a></li>
+			</ul>
+
+
+			<ul>
+				<h6>Argonne National Laboratory Facilities</h6>	
+				<li><a target="_blank" href="http://www.aps.anl.gov/">Advanced Photon Source (APS)</a></li>
+				<li><a target="_blank" href="http://www.msd.anl.gov/groups/emc/">Electron Microscopy Center (EMC)</a></li>
+			</ul>
+
+
+			<ul>
+				<h6>Archaeological Projects</h6>	
+				<li><a target="_blank" href="http://www.kaogu.cn/en/index.asp">Chinese National Institute of Archaeology (IA, CASS)</a></li>
+				<li><a target="_blank" href="http://www.kaogu.cn/en/detail.asp?ProductID=1132">Yi Luo River Valley Survey Project (YRV)</a></li>
+				<li><a target="_blank" href="http://www.saie.wustl.edu/">Central Asian Archaeology and Spatial Analysis Laboratory (SAIE)</a></li>
+                <li><a target="_blank" href="http://www.aragats.net/">Project for the Archaeology and Geography of Ancient Transcaucasian Societies (ArAGATS)</a></li>
+				<li id="last">Copyright 2012, MAE Project</li>
+				<li id="phlabs"><a target="_blank" href="http://www.phlabs.net/" class="phlabs icon">website by Ph Labs</a></li>
+
+			</ul>
+
+
+		</div><!--end footer_inner-->
+	</div><!--end footer-->
 
 
 		</div> <!--end main_wrapper_inner --> 
