Banner edits for UC

--- a/UC_version/publications.html
+++ b/UC_version/publications.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div id="header_image_wide">
-		<img id="header_image_wide" src="_images/mae_header_image_may2012.png">
+		<img id="header_image_wide" src="_images/Banner_06.jpg">
 	</div>
 </div> <!-- end header -->
 
