Updated to new placeholder image

--- a/UC_version/team.html
+++ b/UC_version/team.html
@@ -129,7 +129,7 @@
 <div class="team_member">
 
 	<div class="team_member_photo">
-		<img src="_images/mae_team_member_photo.gif">
+		<img src="_images/placeholder.png">
 	</div>
 
 	<div class="team_member_info">
@@ -163,7 +163,7 @@
 <div class="team_member">
 
 	<div class="team_member_photo">
-		<img src="_images/mae_team_member_photo.gif">
+		<img src="_images/placeholder.png">
 	</div>
 
 	<div class="team_member_info">
@@ -248,7 +248,7 @@
 <div class="team_member">
 
 	<div class="team_member_photo">
-		<img src="_images/mae_team_member_photo.gif">
+		<img src="_images/placeholder.png">
 	</div>
 
 	<div class="team_member_info">
