--- a/UC_version/archaeometry.html
+++ b/UC_version/archaeometry.html
@@ -22,7 +22,15 @@
 	</div>
 
 	<div id="org_logos_horizontal">
-		<img src="_images/Institution_Logos-slim.png">
+		<img id="Institutions" src="_images/Institution_Logos-slim-new.png" usemap="#Image-Maps_Institutions" border="0" width="900" height="150" alt="Institutions" />
+		<map id="_Image-Maps_Institutions" name="Image-Maps_Institutions">
+		<area shape="rect" coords="49,0,250,80" target="_blank" href="http://www.anl.gov" alt="Argonne National Laboratory" title="Argonne National Laboratory"    />
+		<area shape="rect" coords="333,0,554,80" target="_blank" href="http://www.uchicago.edu" alt="The University of Chicago" title="The University of Chicago"    />
+		<area shape="rect" coords="333,79,554,145" target="_blank" href="http://www.isu.edu" alt="Idaho State University" title="Idaho State University"    />
+		<area shape="rect" coords="49,79,250,145" target="_blank" href="http://www.synchrotron.org.au/" alt="Australian Synchrotron" title="Australian Synchrotron"    />
+		<area shape="rect" coords="649,79,849,145" target="_blank" href="http://www.wustl.edu/" alt="Washington University, St. Louis" title="Washington University, St. Louis"    />
+		<area shape="rect" coords="649,0,849,80" target="_blank" href="http://www.cornell.edu" alt="Cornell University" title="Cornell University"    />
+		</map>
 	</div>
 
 	<div id="header_image_wide">
