Adding h1 to header image

--- a/UC_version/index.html
+++ b/UC_version/index.html
@@ -17,9 +17,8 @@
 		
 
 <div id="header">
-	<div id="header_logo">
-		<img src="_images/MAE_Logo-Graphic1-slim.png">
-	</div>
+	<h1 class="header_replacement">Making of Ancient Eurasia
+	</h1>
 
 	<div id="org_logos_horizontal">
 		<img id="Institutions" src="_images/Institution_Logos-slim-new.png" usemap="#Image-Maps_Institutions" border="0" width="900" height="150" alt="Institutions" />
