Fixed image map code & header code (h1 fix not working)

--- a/UC_version/index.html
+++ b/UC_version/index.html
@@ -17,8 +17,9 @@
 		
 
 <div id="header">
-	<h1 class="header_replacement">Making of Ancient Eurasia
-	</h1>
+	<div id="header_logo">
+		<img src="_images/MAE_Logo-Graphic1-ultra_slim.png">
+	</div>
 
 	<div id="org_logos_horizontal">
 		<img id="Institutions" src="_images/Institution_Logos-extra_slim-new.png" usemap="#Image-Maps_Institutions" border="0" width="900" height="100" alt="Institutions" />
@@ -28,7 +29,7 @@
 		<area shape="rect" coords="451,0,650,50" target="_blank" href="http://www.synchrotron.org.au/" alt="Australian Synchrotron" title="Australian Synchrotron"    />
 		<area shape="rect" coords="651,0,850,50" target="_blank" href="http://www.wustl.edu/" alt="Washington University, St. Louis" title="Washington University, St. Louis"    />
 		<area shape="rect" coords="251,51,450,100" target="_blank" href="http://www.isu.edu" alt="Idaho State University" title="Idaho State University"    />
-		<area shape="rect" coords="651,51,850,100" target="_blank" href="http://www.cornell.edu" alt="Cornell University" title="Cornell University"    />
+		<area shape="rect" coords="451,51,650,100" target="_blank" href="http://www.cornell.edu" alt="Cornell University" title="Cornell University"    />
 		</map>
 	</div>
 
