--- a/UC_version/index.html
+++ b/UC_version/index.html
@@ -34,7 +34,7 @@
 	</div>
 
 	<div id="header_image_wide">
-		<img id="header_image_wide" src="_images/mae_header_image_may2012.png">
+		<img id="header_image_wide" src="_images/banner_11.jpg">
 	</div>
 </div> <!-- end header -->
 
