--- a/UC_version/anthropology.html
+++ b/UC_version/anthropology.html
@@ -107,6 +107,10 @@
 				<li><a target="_blank" href="http://www.uchicago.edu/index.shtml">University of Chicago</a></li>
 				<li><a target="_blank" href="http://www.anl.gov/">Argonne National Laboratory</a></li>
 				<li><a target="_blank" href="http://www.uchicagoargonnellc.org/">UChicago/Argonne, LLC</a></li>
+                <li><a target="_blank" href="http://www.wustl.edu/">Washington University in St. Louis</a></li>
+                <li><a target="_blank" href="http://www.synchrotron.org.au//">Australian Synchrotron</a></li>
+                <li><a target="_blank" href="http://www.isu.edu/">Idaho State University</a></li>
+                <li><a target="_blank" href="http://www.cornell.edu/">Cornell University</a></li>
 			</ul>
 
 
