--- a/UC_version/team.html
+++ b/UC_version/team.html
@@ -108,7 +108,7 @@
 	<div class="team_member_info">
 		<ul>
 		<li class="researchers">Michael Chinander</li>
-		<li>Postdoctoral Scholar, Kurt Rossman Laboratories for Radiologic Image Research</li> 
+		<li>Research Professional, Department of Radiology</li> 
 		<li>University of Chicago</li>
 		<li><a href="mailto:m-chinander@uchicago.edu">m-chinander@uchicago.edu</a></li>
 		</ul> 
