--- a/UC_version/publications.html
+++ b/UC_version/publications.html
@@ -18,7 +18,9 @@
 
 <div id="header">
 	<div id="header_logo">
-		<img src="_images/MAE_Logo-Graphic1-ultra_slim.png">
+		<img id="MAE Logo" src="_images/MAE_Logo-Graphic-new.png" usemap="#Image-Maps_MAElogo" border="0" width="900" height="115" alt="MAE Logo" />
+		<map id="_Image-Maps_MAElogo" name="Image-Maps_MAElogo">
+		<area shape="rect" coords="5,5,895,110" target="_blank" href="http://mae.uchicago.edu" alt="Making of Ancient Eurasia" title="Making of Ancient Eurasia Project Home"    />
 	</div>
 
 	<div id="org_logos_horizontal">
