--- a/UC_version/team.html
+++ b/UC_version/team.html
@@ -20,7 +20,7 @@
 	<div id="header_logo">
 		<img id="MAE Logo" src="_images/MAE_Logo-Graphic-new.png" usemap="#Image-Maps_MAElogo" border="0" width="900" height="115" alt="MAE Logo" />
 		<map id="_Image-Maps_MAElogo" name="Image-Maps_MAElogo">
-		<area shape="rect" coords="5,5,895,110" target="_blank" href="http://mae.uchicago.edu" alt="Making of Ancient Eurasia" title="Making of Ancient Eurasia Project Home"    />
+		<area shape="rect" coords="5,5,895,110" href="http://mae.uchicago.edu" alt="Making of Ancient Eurasia" title="Making of Ancient Eurasia Project Home"    />
 	</div>
 
 	<div id="org_logos_horizontal">
