Updated header code to enclose graphic logo in <h1> tag

--- a/UC_version/index.html
+++ b/UC_version/index.html
@@ -15,12 +15,12 @@
 	<div id="main_wrapper"> 
 		<div id="main_wrapper_inner"> 
 		
-
 <div id="header">
 	<div id="header_logo">
-		<img id="MAE Logo" src="_images/MAE_Logo-Graphic-new.png" usemap="#Image-Maps_MAElogo" border="0" width="900" height="115" alt="MAE Logo" />
+		<h1>
+		<img id="MAE Logo" src="_images/MAE_Logo-Graphic-new.png" usemap="#Image-Maps_MAElogo" border="0" width="900" height="115" alt="The Making of Ancient Eurasia Project" />
 		<map id="_Image-Maps_MAElogo" name="Image-Maps_MAElogo">
-		<area shape="rect" coords="5,5,895,110" href="http://mae.uchicago.edu" alt="Making of Ancient Eurasia" title="Making of Ancient Eurasia Project Home"    />
+		<area shape="rect" coords="10,10,890,105" href="/" alt="The Making of Ancient Eurasia Project" title="Making of Ancient Eurasia Project Home"    /></h1>
 	</div>
 
 	<div id="org_logos_horizontal">
