--- a/UC_version/contact.html
+++ b/UC_version/contact.html
@@ -21,7 +21,7 @@
 		<h1>
 		<img id="MAE Logo" src="_images/MAE_Logo-Graphic-new.png" usemap="#Image-Maps_MAElogo" border="0" width="900" height="115" alt="The Making of Ancient Eurasia Project" />
 		<map id="_Image-Maps_MAElogo" name="Image-Maps_MAElogo">
-		<area shape="rect" coords="5,5,895,110" href="http://mae.uchicago.edu" alt="The Making of Ancient Eurasia Project" title="Making of Ancient Eurasia Project Home"    /></h1>
+		<area shape="rect" coords="5,5,895,110" href="/" alt="The Making of Ancient Eurasia Project" title="Making of Ancient Eurasia Project Home"    /></h1>
 	</div>
 
 	<div id="org_logos_horizontal">
