--- a/UC_version/contact.html
+++ b/UC_version/contact.html
@@ -5,7 +5,7 @@
 
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Making of Ancient Eurasia Project</title> 
+<title>The MAE Project > Contact Us</title> 
 <link href="styles.css" media="all" rel="stylesheet" type="text/css" /> 
 <link rel="shortcut icon" href="_images/favicon.ico"/>
 </head> 
