--- a/References/XCT/index.html
+++ b/References/XCT/index.html
@@ -15,6 +15,8 @@
 <a href="Carr_1995.pdf">Carr 1995<a/><br>
 <a href="Carr_and_Riddick_1990.pdf">Carr and Riddick 1990<a/><br>
 <a href="Casali_2006.pdf">Casali 2006</a><br>
+<a href="Digby_1948.pdf">Digby 1948</a><br>
+<a href="Glanzman_and_Fleming_1986.pdf">Glanzman and Fleming 1986</a><br>
 <a href="Greene_and_Hartley_2009.pdf">Greene and Hartley 2009</a><br>
 <a href="Heinsch_and_Vandiver_2006.pdf">Heinsch and Vandiver 2006<a/><br>
 <a href="Hirata_2005.pdf">Hirata 2005</a><br>
@@ -30,6 +32,7 @@
 <a href="Passamore_etal_2001.pdf">Passamore et al. 2001</a><br>
 <a href="Pham_dissAppB.pdf">Pham 2006 (Appendix B)</a><br>
 <a href="Rye_1977.pdf">Rye 1977<a/><br>
+<a href="Titterington_1935.pdf">Titterington 1935</a><br>
 <a href="Vandiver_1987.pdf">Vandiver 1987<a/><br>
 <a href="Vandiver_1988.pdf">Vandiver 1988<a/><br>
 <a href="Vandiver_2001.pdf">Vandiver 2001<a/><br>
