--- a/UC_version/References/Ceramics/index.html
+++ b/UC_version/References/Ceramics/index.html
@@ -16,6 +16,7 @@
 <a href="Mirti_2000.pdf">Mirti 2000</a><br>
 <a href="Pierret_Moran_and_Bresson_1996.pdf">Pierret et al. 1996</a><br>
 <a href="Pillay&al_2000.pdf">Pillay et al. 2000</a><br>
+<a href="Shepard_1936.pdf">Shepard 1936</a><br>
 <a href="Tang&al_2001.pdf">Tang et al. 2001</a><br>
 <a href="Wu&al_2000.pdf">Wu et al. 2000</a><br>
 <a href="Yu&Miao_1998.pdf">Yu and Miao 1998</a><br>
