contact page update

--- a/UC_version/contact.html
+++ b/UC_version/contact.html
@@ -99,10 +99,9 @@
 				<h2>Contact</h2>
 				<p>Making of Ancient Eurasia Project<br />
                 c/o Alan Greene<br />
-                Department of Anthropology<br />
-                University of Chicago<br />
-                1126 E 59th St.<br />
-                Chicago, IL 60637</p>
+                Stanford Archaeology Center<br />
+                PO Box 20446<br />
+                Stanford, CA 94309</p>
                 
                 <div class="hr_thin"></div>
 						
