Leonard et al. 1993 upload

--- a/References/XCT/index.html
+++ b/References/XCT/index.html
@@ -25,6 +25,7 @@
 <a href="Kondo_2005.pdf">Kondo 2005</a><br>
 <a href="Lang_2005.pdf">Lang 2005</a><br>
 <a href="Lang_etal_2005.pdf">Lang et al. 2005</a><br>
+<a href="Leonard_etal_1993.pdf">Leonard et al. 1993</a><br>
 <a href="Mao_2000.pdf">Mao 2000</a><br>
 <a href="Middleton_2005.pdf">Middleton 2005</a><br>
 <a href="Middleton_and_Lang_2005.pdf">Middleton and Lang 2005</a><br>
